Finalizacao de adaptacao do tailwind

--- a/web/layouts/painel-vagas/cabecalho.phtml
+++ b/web/layouts/painel-vagas/cabecalho.phtml
@@ -89,10 +89,7 @@
                         <a href="/">Painel de vagas</a>
                     </li>
                     <li>
-                        <a href="/autenticacao">Área da empresa</a>
-                    </li>
-                    <li>
-                        <a href="/candidato/login">Área do candidato</a>
+                        <a href="/autenticacao">Login</a>
                     </li>
                     <li>
                         <label class="swap swap-rotate">
@@ -124,10 +121,7 @@
                     <a class="btn btn-ghost" href="/">Painel de vagas</a>
                 </li>
                 <li>
-                    <a class="btn btn-ghost" href="/autenticacao">Área da empresa</a>
-                </li>
-                <li>
-                    <a class="btn btn-primary" href="/candidato/login">Área do candidato</a>
+                    <a class="btn btn-primary" href="/autenticacao">Login</a>
                 </li>
                 <li class="flex justify-center">
                     <label class="swap swap-rotate">
