--- a/web/views/usuario/trocarsenha.phtml
+++ b/web/views/usuario/trocarsenha.phtml
@@ -1,21 +1,22 @@
-<div class="container container-sm w-25">
+<div class="mx-auto max-w-2xl border p-4 m-14 rounded-xl bg-white">
     <form method="post" action="/usuario/salvarSenha">
-        <div class="row g-3 align-items-center mb-2">
-            <div class="col-md-12 form-floating">
-                <input type="password" class="form-control" name="senha" id="senha" minlength="8" required>
-                <label for="senha" class="col-form-label ">Digite a nova senha
-                    <span class="text-danger">*</span></label></label>
-            </div>
+        <div class="flex space-x-2">
+            <label class="form-control w-full">
+                <div class="label">
+                    <span class="label-text">Digite a nova senha</span>
+                </div>
+                <input type="password" name="senha" id="senha" required minlength="8" class="input input-bordered w-full"/>
+            </label>
         </div>
 
-        <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
-            <div class="col-12">
-                <div class="d-grid">
-                    <button class="btn btn-primary" type="submit">
-                        <i class="fas fa-save"></i> Salvar
-                    </button>
-                </div>
-            </div>
+
+        <div class="mt-6 flex items-center justify-end">
+            <button class="btn btn-success btn-block" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
+                Salvar
+            </button>
         </div>
     </form>
 </div>
