--- a/web/views/vaga/card.html
+++ b/web/views/vaga/card.html
@@ -107,7 +107,7 @@
             <form method="dialog">
                 <!-- if there is a button in form, it will close the modal -->
                 <button class="btn btn-ghost">Fechar</button>
-                <a href="/vaga/exibir/?id={id}" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Quero me candidatar</a>
+                <a href="/vaga/exibir/?id={id}" class="btn btn-primary" rel="noopener noreferrer">Quero me candidatar</a>
             </form>
         </div>
     </div>
