--- a/web/views/vaga/detalhes.phtml
+++ b/web/views/vaga/detalhes.phtml
@@ -32,7 +32,7 @@
                     <?php endif; ?>
                 <?php endif ?>
             <?php else : ?>
-                <a class="btn btn-primary" href="/candidato/login">Quer se candidatar? Efetue Login</a>
+                <a class="btn btn-primary" href="/autenticacao">Quer se candidatar? Efetue Login</a>
             <?php endif; ?>
         <?php else : ?>
             <div role="alert" class="alert alert-warning flex">
