--- a/web/views/autenticacao/login.phtml
+++ b/web/views/autenticacao/login.phtml
@@ -1,67 +1,127 @@
-<div class="col-12">
-    <?php FlashMessage::getMessage() ?>
-</div>
+<div class="container mx-auto flex justify-center mt-10 mb-10">
+    <div class="w-2/5">
+        <?php echo FlashMessage::getMessage(); ?>
 
-<h4>Área da empresa</h4>
-<form action="/autenticacao/processaLogin" method="post">
-    <div class="row gy-3 gy-md-4 overflow-hidden mt-5">
-        <div class="col-12">
-            <label for="email" class="form-label">Email
-                <span>*</span></label>
-            <input type="text" class="form-control" name="email" id="email" placeholder="Informe seu e-mail de acesso" value="<?=$usuarioLembrado?>" required>
-        </div>
-        <div class="col-12">
-            <label for="senha" class="form-label">Senha
-                <span>*</span></label>
-            <input type="password" class="form-control" name="senha" id="senha" value="" placeholder="*****" required>
-        </div>
-        <div class="col-12 d-flex justify-content-between">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="1" name="remember_me" id="remember_me" <?= !empty($usuarioLembrado) ? "checked" : "" ?>>
-                <label class="form-check-label" for="remember_me">
-                    Lembrar meu usuário
-                </label>
+        <div role="tablist" class="tabs tabs-lifted">
+            <input type="radio" name="tipoLogin" role="tab" class="tab" aria-label="Sou candidato" <?= empty($tab) || $tab != 2 ? 'checked' : '' ?> />
+            <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
+                <form action="/candidato/processaLogin" method="post">
+                    <div class="mt-5">
+                        <label class="input input-bordered flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"/>
+                            </svg>
+                            <input type="email" class="grow" name="email" id="email" placeholder="Informe seu e-mail de acesso" value="<?= $candidatoLembrado ?>" required/>
+                        </label>
+                    </div>
+                    <div class="mt-5">
+                        <label class="input input-bordered flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                                <path fill-rule="evenodd" d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z" clip-rule="evenodd"/>
+                            </svg>
+                            <input type="password" class="grow" name="senha" id="senha" value="" placeholder="*****" required/>
+                        </label>
+                    </div>
+                    <div class="mt-5 flex justify-between items-center">
+                        <div class="form-control ">
+                            <label class="label cursor-pointer">
+                                <input type="checkbox" class="toggle  toggle-success" <?= !empty($candidatoLembrado) ? "checked" : "" ?> value="1" name="remember_me" id="remember_me"/>
+                                <span class="ms-2 label-text">Lembrar meu usuário</span>
+                            </label>
+                        </div>
+                        <a href="/usuario/esqueci-senha" class="link-success">Esqueci minha senha</a>
+                    </div>
+                    <div class="mt-5 flex justify-end items-center">
+                        <button id="icon-button_candidato" class="btn btn-success btn-block" type="submit">
+                            <label class="swap swap-flip">
+                                <input type="checkbox" id="swap-icon-button_candidato"/>
+                                <svg class="swap-off h-5 w-5 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"/>
+                                </svg>
+                                <svg class="swap-on h-5 w-5 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5V6.75a4.5 4.5 0 1 1 9 0v3.75M3.75 21.75h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H3.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"/>
+                                </svg>
+                            </label>
+                            Acessar
+                        </button>
+                    </div>
+                </form>
+                <div class="divider"></div>
+                <div class="flex items-center justify-center font-semibold mt-5">
+                    Ainda não possui cadastro?
+                </div>
+                <div class="flex items-center justify-center mt-2">
+                    <a href="/candidato/cadastrar" class="btn btn-neutral font-bold btn-block">Crie sua conta agora!</a>
+                </div>
             </div>
-            <a href="/usuario/esqueci-senha" class="link-secondary text-decoration-none">Esqueci minha senha</a>
-        </div>
-        <div class="col-12">
-            <div class="d-grid">
-                <button id="icon-button" class="btn btn-primary" type="submit">
-                    <i class="fas fa-lock icon-transition"></i>
-                    <i class="fas fa-lock-open icon-transition" style="display: none;"></i>
-                    Acessar
-                </button>
+
+            <input type="radio" name="tipoLogin" role="tab" class="tab" aria-label="Sou empresa" <?= !empty($tab) && $tab == 2 ? 'checked' : '' ?>/>
+            <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
+                <form action="/usuario/processaLogin" method="post">
+                    <div class="mt-5">
+                        <label class="input input-bordered flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"/>
+                            </svg>
+                            <input type="email" class="grow" name="email" id="email" placeholder="Informe seu e-mail de acesso" value="<?= $usuarioLembrado ?>" required/>
+                        </label>
+                    </div>
+                    <div class="mt-5">
+                        <label class="input input-bordered flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                                <path fill-rule="evenodd" d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z" clip-rule="evenodd"/>
+                            </svg>
+                            <input type="password" class="grow" name="senha" id="senha" value="" placeholder="*****" required/>
+                        </label>
+                    </div>
+                    <div class="mt-5 flex justify-between items-center">
+                        <div class="form-control ">
+                            <label class="label cursor-pointer">
+                                <input type="checkbox" class="toggle  toggle-primary" <?= !empty($usuarioLembrado) ? "checked" : "" ?> value="1" name="remember_me" id="remember_me"/>
+                                <span class="ms-2 label-text">Lembrar meu usuário</span>
+                            </label>
+                        </div>
+                        <a href="/usuario/esqueci-senha" class="link-primary">Esqueci minha senha</a>
+                    </div>
+                    <div class="mt-5 flex justify-end items-center">
+                        <button id="icon-button_empresa" class="btn btn-primary btn-block" type="submit">
+                            <label class="swap swap-flip">
+                                <input type="checkbox" id="swap-icon-button_empresa"/>
+                                <svg class="swap-off h-5 w-5 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"/>
+                                </svg>
+                                <svg class="swap-on h-5 w-5 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5V6.75a4.5 4.5 0 1 1 9 0v3.75M3.75 21.75h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H3.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"/>
+                                </svg>
+                            </label>
+                            Acessar
+                        </button>
+                    </div>
+                </form>
+                <div class="divider"></div>
+                <div class="flex items-center justify-center font-semibold mt-5">
+                    Ainda não divulga suas vagas conosco?
+                </div>
+                <div class="flex items-center justify-center mt-2">
+                    <a href="/empresa/cadastrar" class="btn btn-neutral font-bold btn-block">Comece a divulgar agora mesmo!</a>
+                </div>
             </div>
-        </div>
-    </div>
-</form>
-
-<div class="row">
-    <div class="col-12">
-        <hr class="mt-5 mb-4 border-secondary-subtle">
-        <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-between">
-            <a href="/" class="link-secondary text-decoration-none">Painel de vagas</a>
-            <a href="/empresa/cadastrar" class="link-secondary text-decoration-none">Cadastrar minha empresa</a>
-
         </div>
     </div>
 </div>
 
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
-        const button = document.getElementById('icon-button');
-        const lockIcon = button.querySelector('.fa-lock');
-        const lockOpenIcon = button.querySelector('.fa-lock-open');
+        const button_candidato = document.getElementById('icon-button_candidato');
+        const swapIconButton_candidato = document.getElementById('swap-icon-button_candidato');
 
-        button.addEventListener('mouseenter', () => {
-            lockIcon.style.display = 'none';
-            lockOpenIcon.style.display = '';
-        });
+        button_candidato.addEventListener('mouseenter', () => swapIconButton_candidato.checked = true);
+        button_candidato.addEventListener('mouseleave', () => swapIconButton_candidato.checked = false);
 
-        button.addEventListener('mouseleave', () => {
-            lockIcon.style.display = '';
-            lockOpenIcon.style.display = 'none';
+        const button_empresa = document.getElementById('icon-button_empresa');
+        const swapIconButton_empresa = document.getElementById('swap-icon-button_empresa');
 
-        });
+        button_empresa.addEventListener('mouseenter', () => swapIconButton_empresa.checked = true);
+        button_empresa.addEventListener('mouseleave', () => swapIconButton_empresa.checked = false);
     });
 </script>
