--- a/web/views/empresa/cadastrar.phtml
+++ b/web/views/empresa/cadastrar.phtml
@@ -1,133 +1,191 @@
-<?php FlashMessage::getMessage() ?>
+<div class="mx-auto max-w-7xl border p-4 rounded-xl bg-white mt-10 mb-20">
+    <?php echo FlashMessage::getMessage(); ?>
 
-<form action="/empresa/processaCadastrar" method="post" enctype="multipart/form-data">
-    <div class="row mt-3">
-        <div class="col-6 col-md-6">
-            <div class="p-3 p-md-4 p-xl-5">
-                <div class="row gy-3 gy-md-4 overflow-hidden">
-                    <h6>Dados da empresa</h6>
-                    <div class="col-6">
-                        <label for="cnpj" class="form-label">CNPJ
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="cnpj" id="cnpj" placeholder="CNPJ" maxlength="14" minlength="14" required>
-                    </div>
-                    <div class="col-12">
-                        <label for="nome" class="form-label">Nome da empresa
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome da empresa" required>
-                    </div>
-                    <div class="col-12">
-                        <label for="email" class="form-label">Email
-                            <span>*</span></label>
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Informe um email válido" required>
-                    </div>
-                    <div class="col-12">
-                        <label for="descricao" class="form-label">Descrição
-                            <span>*</span></label>
-                        <textarea type="text" class="form-control" name="descricao" id="descricao" placeholder="Descrição" required></textarea>
-                    </div>
-                    <div class="col-12">
-                        <label for="logo" class="form-label">Logo
-                            <span>*</span></label>
-                        <input type="file" class="form-control" name="logo" id="logo" placeholder="Adicione uma imagem" required>
-                    </div>
-
+    <form action="/empresa/processaCadastrar" method="post" enctype="multipart/form-data">
+        <div class="grid grid-cols-[1fr_auto_1fr]">
+            <div>
+                <div class="p-2 bg-slate-100 rounded-xl mb-5">
+                    <h2 class="text-base font-semibold text-gray-900">Dados da empresa</h2>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-1/2">
+                        <div class="label">
+                            <span class="label-text">CNPJ</span>
+                        </div>
+                        <input type="text" name="cnpj" id="cnpj" maxlength="14" minlength="14" required placeholder="" class="input input-bordered w-full" oninput="this.value = this.value.replace(/[^0-9]/g, '');"/>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Nome da empresa</span>
+                        </div>
+                        <input type="text" name="nome" id="nome" required placeholder="" class="input input-bordered w-full"/>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Email da empresa</span>
+                        </div>
+                        <input type="email" name="email" id="email" required placeholder="" class="input input-bordered w-full"/>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Descrição da empresa</span>
+                        </div>
+                        <textarea name="descricao" id="descricao" required class="textarea textarea-bordered h-24 max-h-24 min-h-24"></textarea>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Logo da empresa</span>
+                        </div>
+                        <input type="file" name="logo" id="logo" required class="file-input file-input-bordered w-full"/>
+                    </label>
                 </div>
             </div>
-        </div>
-        <div class="col-6 col-md-6 border-start border-secondary">
-            <div class="p-3 p-md-4 p-xl-5">
-                <div class="row gy-3 gy-md-4 overflow-hidden">
-                    <h6>Dados do usuário</h6>
-                    <div class="col-6">
-                        <label for="usuarioCpf" class="form-label">CPF
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="usuarioCpf" id="usuarioCpf" placeholder="Informe o CPF do usuário" required>
-                    </div>
-                    <div class="col-6">
-                        <label for="usuarioSenha" class="form-label">Senha
-                            <span>*</span></label>
-                        <input type="password" class="form-control" name="usuarioSenha" id="usuarioSenha" value="" required placeholder="*****">
-                    </div>
-                    <div class="col-12">
-                        <label for="usuarioNome" class="form-label">Nome
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="usuarioNome" id="usuarioNome" placeholder="Informe o nome do usuário" required>
-                    </div>
-                    <div class="col-12">
-                        <label for="usuarioEmail" class="form-label">Email
-                            <span>*</span></label>
-                        <input type="text" class="form-control" name="usuarioEmail" id="usuarioEmail" placeholder="Informe o e-mail do usuário" required>
-                    </div>
+            <div class="flex justify-center">
+                <div class="divider  divider-horizontal w-1"></div>
+            </div>
+            <div>
+                <div class="p-2 bg-slate-100 rounded-xl mb-5">
+                    <h2 class="text-base font-semibold text-gray-900">Dados do usuário</h2>
                 </div>
-                <hr>
-                <div class="row gy-3 gy-md-4 overflow-hidden">
-                    <h6>Dados da filial</h6>
-                    <div class="col-8">
-                        <label for="filialNome" class="form-label">Nome da filial *</label>
-                        <input type="text" class="form-control" name="filialNome" id="filialNome" required>
-                    </div>
-                    <div class="col-4">
-                        <label for="filialCep" class="form-label">Cep *</label>
-                        <input type="text" class="form-control" name="filialCep" id="filialCep" minlength="8" maxlength="8" required oninput="this.value = this.value.replace(/[^0-9]/g, '');">
-                    </div>
-                    <div class="col-12">
-                        <label for="filialLogradouro" class="form-label">Logradouro *</label>
-                        <input type="text" class="form-control" name="filialLogradouro" id="filialLogradouro">
-                    </div>
-                    <div class="col-4">
-                        <label for="filialNumero" class="form-label">Numero *</label>
-                        <input type="text" class="form-control" name="filialNumero" id="filialNumero">
-                    </div>
-                    <div class="col-8">
-                        <label for="filialComplemento" class="form-label">Complemento *</label>
-                        <input type="text" class="form-control" name="filialComplemento" id="filialComplemento">
-                    </div>
-                    <div class="col-5">
-                        <label for="filialBairro" class="form-label">Bairro *</label>
-                        <input type="text" class="form-control" name="filialBairro" id="filialBairro">
-                    </div>
-                    <div class="col-5">
-                        <label for="filialCidade" class="form-label">Cidade *</label>
-                        <input type="text" class="form-control" name="filialCidade" id="filialCidade" required>
-                    </div>
-                    <div class="col-2">
-                        <label for="filialEstado" class="form-label">Estado</label>
-                        <select class="form-control" name="filialEstado" id="filialEstado" required>
+                <div class="flex space-x-2">
+                    <label class="form-control w-1/2">
+                        <div class="label">
+                            <span class="label-text">E-mail</span>
+                        </div>
+                        <input type="email" name="usuarioEmail" id="usuarioEmail" required placeholder="" class="input input-bordered w-full"/>
+                        <div class="label">
+                            <span class="label-text-alt">Esse e-mail será o login do usuário</span>
+                        </div>
+                    </label>
+                    <label class="form-control w-1/2">
+                        <div class="label">
+                            <span class="label-text">Senha</span>
+                        </div>
+                        <input type="password" name="usuarioSenha" id="usuarioSenha" required minlength="8" placeholder="" class="input input-bordered w-full"/>
+                        <div class="label">
+                            <span class="label-text-alt">Mínimo 8 caracteres</span>
+                        </div>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-1/2">
+                        <div class="label">
+                            <span class="label-text">CPF</span>
+                        </div>
+                        <input type="text" name="usuarioCpf" id="usuarioCpf" required placeholder="" minlength="11" maxlength="11" class="input input-bordered w-full" oninput="this.value = this.value.replace(/[^0-9]/g, '');"/>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Nome completo do usuário</span>
+                        </div>
+                        <input type="text" name="usuarioNome" id="usuarioNome" required class="input input-bordered w-full"/>
+                    </label>
+                </div>
+
+                <div class="p-2 bg-slate-100 rounded-xl mb-5 mt-5">
+                    <h2 class="text-base font-semibold text-gray-900">Dados da filial</h2>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-2/3">
+                        <div class="label">
+                            <span class="label-text">Nome/Apelido da filial</span>
+                        </div>
+                        <input type="text" name="filialNome" id="filialNome" required class="input input-bordered w-full"/>
+                    </label>
+                    <label class="form-control w-1/3">
+                        <div class="label">
+                            <span class="label-text">CEP</span>
+                        </div>
+                        <input type="text" name="filialCep" id="filialCep" minlength="8" maxlength="8" required class="input input-bordered w-full" oninput="this.value = this.value.replace(/[^0-9]/g, '');"/>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Logradouro</span>
+                        </div>
+                        <input type="text" name="filialLogradouro" id="filialLogradouro" class="input input-bordered w-full"/>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-1/3">
+                        <div class="label">
+                            <span class="label-text">Número</span>
+                        </div>
+                        <input type="text" name="filialNumero" id="filialNumero" class="input input-bordered w-full"/>
+                    </label>
+                    <label class="form-control w-2/3">
+                        <div class="label">
+                            <span class="label-text">Complemento</span>
+                        </div>
+                        <input type="text" name="filialComplemento" id="filialComplemento" class="input input-bordered w-full"/>
+                    </label>
+                </div>
+                <div class="flex space-x-2">
+                    <label class="form-control w-5/12">
+                        <div class="label">
+                            <span class="label-text">Bairro</span>
+                        </div>
+                        <input type="text" name="filialBairro" id="filialBairro" class="input input-bordered w-full"/>
+                    </label>
+                    <label class="form-control w-5/12">
+                        <div class="label">
+                            <span class="label-text">Cidade</span>
+                        </div>
+                        <input type="text" name="filialCidade" id="filialCidade" required class="input input-bordered w-full"/>
+                    </label>
+                    <label class="form-control w-2/12">
+                        <div class="label">
+                            <span class="label-text">Estado</span>
+                        </div>
+                        <select class="select select-bordered w-full" name="filialEstado" id="filialEstado" required>
                             <option value="" disabled selected>-</option>
-                                <?php foreach (EstadoEnum::forSelect() as $indice => $valor): ?>
-                                    <option value="<?= $indice ?>" <?= !empty($filial) && $filial->getEstado() == $indice ? 'selected' : ''?>><?= $valor ?></option>
-                                <?php endforeach; ?>
+                            <?php foreach (EstadoEnum::forSelect() as $indice => $valor): ?>
+                                <option value="<?= $indice ?>" <?= !empty($filial) && $filial->getEstado() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
+                            <?php endforeach; ?>
                         </select>
-                    </div>
-
+                    </label>
                 </div>
+
             </div>
         </div>
-    </div>
-    <div class="row mt-4">
-        <div class="col-12">
-            <div class="d-grid">
-                <button class="btn btn-primary" type="submit">Cadastrar</button>
-            </div>
+        <div class="mt-10 mb-10 flex items-center justify-end">
+            <button class="btn btn-primary btn-block" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"/>
+                </svg>
+                Cadastrar minha empresa
+            </button>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <hr class="mt-5 mb-4 border-secondary-subtle">
-            <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-between">
-                <a href="/" class="link-secondary text-decoration-none">Painel de vagas</a>
-                <a href="/autenticacao/index" class="link-secondary text-decoration-none">Já possui cadastro? Faça o login</a>
-            </div>
+
+        <div class="divider"></div>
+        <div class="flex items-center justify-center font-semibold mt-5">
+            Já possui cadastro?
         </div>
-    </div>
-</form>
+        <div class="flex items-center justify-center mt-2">
+            <a href="/autenticacao/?tab=2" class="btn btn-neutral font-bold btn-block">Efetue seu login!</a>
+        </div>
+    </form>
+</div>
 
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
         let campo = document.querySelector("#filialCep");
-
         campo.addEventListener('blur', function () {
+            if (campo.value.trim() == '') {
+                return;
+            }
+
             // let url = 'https://brasilapi.com.br/api/cep/v1/' + campo.value;
             let url = '/api/cep/?cep=' + campo.value;
             fetch(url)
@@ -155,7 +213,6 @@
         });
 
         let campoCnpj = document.querySelector("#cnpj")
-
         campoCnpj.addEventListener('blur', function () {
             // let url = 'https://brasilapi.com.br/api/cnpj/v1/' + campoCnpj.value
             let url = '/api/cnpj/?cnpj=' + campoCnpj.value;
@@ -175,7 +232,5 @@
                     document.querySelector('#filialNome').value = 'Matriz'
                 })
         })
-
-
     });
 </script>
