--- a/web/views/filial/formulario.phtml
+++ b/web/views/filial/formulario.phtml
@@ -1,59 +1,116 @@
-<div class="container container-sm w-50">
+<div class="mx-auto max-w-3xl border p-4 m-14 rounded-xl bg-white">
     <form method="post" action="/filial/processaCadastrar">
         <input type="hidden" name="filialId" value="<?= isset($filial) ? $filial->getId() : '' ?>"/>
-        <div class="row g-3 align-items-center mb-2">
-            <div class="col-md-7 form-floating">
-                <input type="text" class="form-control" name="filialNome" value="<?= isset($filial) ? $filial->getNome() : '' ?>" id="filialNome" required>
-                <label for="filialNome" class="col-form-label">Nome</label>
-            </div>
-            <div class="col-md-5 form-floating">
-                <input type="text" class="form-control" name="filialCep" value="<?= isset($filial) ? $filial->getCep() : '' ?>" id="filialCep" minlength="8" maxlength="8" required oninput="this.value = this.value.replace(/[^0-9]/g, '');">
-                <label for="filialCep" class="col-form-label">Cep</label>
-            </div>
+        <div class="flex space-x-2">
+            <label class="form-control w-7/12">
+                <div class="label">
+                    <span class="label-text">Nome / Identificação</span>
+                </div>
+                <input type="text" name="filialNome" id="filialNome" required value="<?= isset($filial) ? $filial->getNome() : '' ?>" class="input input-bordered w-full"/>
+            </label>
+            <label class="form-control w-5/12">
+                <div class="label">
+                    <span class="label-text">CEP</span>
+                </div>
+                <input type="text" name="filialCep" id="filialCep" required minlength="8" maxlength="8" value="<?= isset($filial) ? $filial->getCep() : '' ?>" class="input input-bordered w-full" oninput="this.value = this.value.replace(/[^0-9]/g, '');"/>
+                <div class="label">
+                    <span class="label-text-alt">Exatos 8 caracteres - somente números</span>
+                </div>
+            </label>
         </div>
-        <div class="row g-3 align-items-center mb-2">
-            <div class="col-md-12 form-floating">
-                <input type="text" class="form-control" name="filialLogradouro" value="<?= isset($filial) ? $filial->getLogradouro() : '' ?>" id="filialLogradouro">
-                <label for="filialLogradouro" class="col-form-label">Logradouro</label>
-            </div>
+        <div class="flex space-x-2">
+            <label class="form-control w-full">
+                <div class="label">
+                    <span class="label-text">Logradouro</span>
+                </div>
+                <input type="email" name="filialLogradouro" id="filialLogradouro" value="<?= isset($filial) ? $filial->getLogradouro() : '' ?>" class="input input-bordered w-full"/>
+            </label>
         </div>
-        <div class="row g-3 align-items-center mb-2">
-            <div class="col-md-4 form-floating">
-                <input type="text" class="form-control" name="filialNumero" value="<?= isset($filial) ? $filial->getNumero() : '' ?>" id="filialNumero">
-                <label for="filialNumero" class="col-form-label">Número</label>
-            </div>
-            <div class="col-md-8 form-floating">
-                <input type="text" class="form-control" name="filialComplemento" value="<?= isset($filial) ? $filial->getComplemento() : '' ?>" id="complemento">
-                <label for="complemento" class="col-form-label">Complemento</label>
-            </div>
+        <div class="flex space-x-2">
+            <label class="form-control w-1/3">
+                <div class="label">
+                    <span class="label-text">Número</span>
+                </div>
+                <input type="text" name="filialNumero" id="filialNumero" value="<?= isset($filial) ? $filial->getNumero() : '' ?>" class="input input-bordered w-full"/>
+            </label>
+            <label class="form-control w-2/3">
+                <div class="label">
+                    <span class="label-text">Complemento</span>
+                </div>
+                <input type="text" name="filialComplemento" id="complemento" value="<?= isset($filial) ? $filial->getComplemento() : '' ?>" class="input input-bordered w-full"/>
+            </label>
         </div>
-        <div class="row g-3 align-items-center mb-2">
-            <div class="col-md-5 form-floating">
-                <input type="text" class="form-control" name="filialBairro" value="<?= isset($filial) ? $filial->getBairro() : '' ?>" id="bairro">
-                <label for="bairro" class="col-form-label">Bairro</label>
-            </div>
-            <div class="col-md-5 form-floating">
-                <input type="text" class="form-control" name="filialCidade" value="<?= isset($filial) ? $filial->getCidade() : '' ?>" id="cidade" required>
-                <label for="cidade" class="col-form-label">Cidade</label>
-            </div>
-            <div class="col-md-2 form-floating">
-                <select class="form-control" name="filialEstado" id="filialEstado" required>
+        <div class="flex space-x-2">
+            <label class="form-control w-5/12">
+                <div class="label">
+                    <span class="label-text">Bairro</span>
+                </div>
+                <input type="text" name="filialBairro" id="filialBairro" value="<?= isset($filial) ? $filial->getBairro() : '' ?>" class="input input-bordered w-full"/>
+            </label>
+            <label class="form-control w-5/12">
+                <div class="label">
+                    <span class="label-text">Cidade</span>
+                </div>
+                <input type="text" name="filialCidade" id="filialCidade" required value="<?= isset($filial) ? $filial->getCidade() : '' ?>" class="input input-bordered w-full"/>
+            </label>
+            <label class="form-control w-2/12">
+                <div class="label">
+                    <span class="label-text">Estado</span>
+                </div>
+                <select class="select select-bordered" name="filialEstado" id="filialEstado" required>
                     <option value="" disabled selected>-</option>
                     <?php foreach (EstadoEnum::forSelect() as $indice => $valor): ?>
-                        <option value="<?= $indice ?>" <?= !empty($filial) && $filial->getEstado() == $indice ? 'selected' : ''?>><?= $valor ?></option>
+                        <option value="<?= $indice ?>" <?= !empty($filial) && $filial->getEstado() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
                     <?php endforeach; ?>
                 </select>
-                <label for="filialEstado" class="col-form-label">Estado</label>
-            </div>
+            </label>
         </div>
-        <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
-            <div class="col-12">
-                <div class="d-grid">
-                    <button class="btn btn-primary" type="submit">
-                        <i class="fas fa-save"></i> Salvar
-                    </button>
-                </div>
-            </div>
+
+        <div class="mt-6 flex items-center justify-end">
+            <button class="btn btn-success btn-wide" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
+
+                Cadastrar
+            </button>
         </div>
     </form>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+        let campo = document.querySelector("#filialCep");
+        campo.addEventListener('blur', function () {
+            if (campo.value.trim() == '') {
+                return;
+            }
+
+            // let url = 'https://brasilapi.com.br/api/cep/v1/' + campo.value;
+            let url = '/api/cep/?cep=' + campo.value;
+            fetch(url)
+                .then(response => {
+                    if (response.status !== 200) {
+                        throw new Error('Erro lalallaa')
+                    }
+                    return response.json()
+                })
+                .then(data => {
+                    document.querySelector("#filialLogradouro").value = data.street;
+                    document.querySelector("#filialBairro").value = data.neighborhood;
+                    document.querySelector("#filialCidade").value = data.city;
+                    document.querySelector("#filialEstado").value = data.state;
+
+                })
+                .catch(error => {
+                    alert('CEP não encontrado');
+                    campo.value = '';
+                    document.querySelector("#filialLogradouro").value = '';
+                    document.querySelector("#filialBairro").value = '';
+                    document.querySelector("#filialCidade").value = '';
+                    document.querySelector("#filialEstado").value = '';
+                })
+        });
+
+    });
+</script>
