--- a/web/views/usuario/formulario.phtml
+++ b/web/views/usuario/formulario.phtml
@@ -1,31 +1,43 @@
-<div class="container container-sm w-50">
+<div class="mx-auto max-w-3xl border p-4 m-14 rounded-xl bg-white">
     <form method="post" action="/usuario/salvar">
         <input type="hidden" name="usuarioId" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getId() : '' ?>"/>
-        <div class="row g-3 align-items-center mb-2">
-            <div class="col-md-12 form-floating">
-                <input type="text" class="form-control" name="nome" id="nome" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getNome() : '' ?>">
-                <label for="nome" class="col-form-label">Nome</label>
-            </div>
+        <div class="flex space-x-2">
+            <label class="form-control w-2/3">
+                <div class="label">
+                    <span class="label-text">Nome completo</span>
+                </div>
+                <input type="text" name="nome" id="nome" required value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getNome() : '' ?>" class="input input-bordered w-full"/>
+            </label>
+
+            <label class="form-control w-1/3">
+                <div class="label">
+                    <span class="label-text">CPF</span>
+                </div>
+                <input type="text" name="cpf" id="cpf" required value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getCpf() : '' ?>" class="input input-bordered w-full" oninput="this.value = this.value.replace(/[^0-9]/g, '');"/>
+                <div class="label">
+                    <span class="label-text-alt">Exatos 11 caracteres - somente números</span>
+                </div>
+            </label>
         </div>
-        <div class="row g-3 align-items-center mb-2">
-            <div class="col-md-5 form-floating">
-                <input type="text" class="form-control" name="cpf" id="cpf" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getCpf() : '' ?>" required>
-                <label for="cpf" class="col-form-label">CPF <span class="text-danger">*</span></label></label>
-            </div>
-            <div class="col-md-7 form-floating">
-                <input type="text" class="form-control" name="email" id="email" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getEmail() : '' ?>">
-                <label for="email" class="col-form-label">E-mail</label>
-            </div>
+        <div class="flex space-x-2">
+            <label class="form-control w-full">
+                <div class="label">
+                    <span class="label-text">E-mail</span>
+                </div>
+                <input type="email" name="email" id="email" required value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getEmail() : '' ?>" class="input input-bordered w-full"/>
+                <div class="label">
+                    <span class="label-text-alt">Esse e-mail será o login do usuário</span>
+                </div>
+            </label>
         </div>
 
-        <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
-            <div class="col-12">
-                <div class="d-grid">
-                    <button class="btn btn-primary" type="submit">
-                        <i class="fas fa-save"></i> Salvar
-                    </button>
-                </div>
-            </div>
+        <div class="mt-6 flex items-center justify-end">
+            <button class="btn btn-success btn-wide" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
+                Cadastrar
+            </button>
         </div>
     </form>
 </div>
