--- a/web/layouts/sistema-candidato/cabecalho.phtml
+++ b/web/layouts/sistema-candidato/cabecalho.phtml
@@ -138,6 +138,9 @@
                     <a class="btn btn-ghost" href="/candidato/login">Painel de vagas</a>
                 </li>
                 <li>
+                    <a class="btn btn-ghost" href="/candidato/vagasRecomendadas">Recomendações de vagas</a>
+                </li>
+                <li>
                     <a class="btn btn-ghost" href="/candidato/listar">Minhas Vagas</a>
                 </li>
 
