--- a/web/views/candidato/listar.phtml
+++ b/web/views/candidato/listar.phtml
@@ -16,6 +16,7 @@
                         </svg>
                     </div>
                 </th>
+                <th class="border border-slate-300 dark:border-slate-600 font-semibold text-slate-900 dark:text-slate-200">Propostas</th>
             </tr>
             </thead>
             <tbody>
@@ -34,6 +35,9 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 15.75-2.489-2.489m0 0a3.375 3.375 0 1 0-4.773-4.773 3.375 3.375 0 0 0 4.774 4.774ZM21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
                             </svg>
                         </a>
+                    </td>
+                    <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400">
+                        
                     </td>
                 </tr>
             <?php endforeach; ?>
