--- a/web/views/propostas/aceite.phtml
+++ b/web/views/propostas/aceite.phtml
@@ -1,128 +1,106 @@
 <?php /** @var Vaga $vaga */ ?>
-<div class="container container-sm w-75">
-        <input type="hidden" />
-            <div class="col-md-6">
-                <div class="col-md-2 form-floating">
-                    <label for="vaga" class="col-form-label">Vaga <?= $_GET['vagaId']?></label>
-                </div>
-                <div class="col-md-2 form-floating">
+<div id="vagas" class="flex flex-col px-4 py-10 gap-10 justify-center items-center">
+    <h2 class="text-3xl font-bold">Proposta de contratação</h2>
+</div>
+<div class="mx-auto max-w-4xl border p-4 m-1 mb-20 rounded-xl bg-white">
+    <input type="hidden"/>
+    <div class="flex space-x-2">
+        <label class="form-control w-1/4">
+            <label for="vaga" class="col-form-label">Vaga <?= $_GET['vagaId'] ?></label>
+        </label>
+        <label class="form-control w-1/3">
+            <label for="candidato" class="col-form-label">Candidato <?= $candidato ?></label>
+        </label>
+    </div>
+    <div class="divider"></div>
+    <div class="flex space-x-2">
+        <label class="form-control w-3/4">
+            <div class="label">
+                <span class="label-text">Cargo</span>
+            </div>
+            <?= $propostas->getCargo() ?>
+        </label>
+        <label class="form-control w-1/4">
+            <div class="label">
+                <span class="label-text">Salário</span>
+            </div>
+            R$ <?= $propostas->getSalario() ?>,00
+        </label>
+    </div>
+    <div class="flex space-x-2">
+        <label class="form-control w-1/4">
+            <div class="label">
+                <span class="label-text">Regime de Contratação</span>
+            </div>
+            <?= $propostas->getRegimeContratacao() ?>
+        </label>
+        <label class="form-control w-1/4">
+            <div class="label">
+                <span class="label-text">Regime de Trabalho</span>
+            </div>
+            <?= $propostas->getRegimeTrabalho() ?>
+        </label>
+        <label class="form-control w-1/4">
+            <div class="label">
+                <span class="label-text">Nível de Senioridade</span>
+            </div>
+            <?= $propostas->getNivelSenioridade() ?>
+        </label>
+        <label class="form-control w-1/4">
+            <div class="label">
+                <span class="label-text">Nível hierárquico</span>
+            </div>
+            <?= $propostas->getNivelHierarquico() ?>
+        </label>
+    </div>
+    <div class="flex space-x-2">
+        <label class="form-control w-2/4">
+            <div class="label">
+                <span class="label-text">Endereço</span>
+            </div>
+            <?= $propostas->getEndereco() ?>
+        </label>
+        <label class="form-control w-1/4">
+            <div class="label">
+                <span class="label-text">Expediente</span>
+            </div>
+            <?= $propostas->getExpediente() ?>
+        </label>
+        <label class="form-control w-1/4">
+            <div class="label">
+                <span class="label-text">Data de início</span>
+            </div>
+            <?= $propostas->getDataInicio() ?>
+        </label>
+    </div>
 
-                    <label for="candidato" class="col-form-label">Candidato <?= $candidato ?></label>
-                </div>
-                <div class="input-group">
-                    <div class="form-floating">
-                        <label for="salario" class="col-form-label">Salário <?= $propostas->getSalario() ?></label>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row g-3 align-items-center mb-2">
-            <!-- REGIME DE CONTRATAÇÃO -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="regime_contratacao" id="regime_contratacao" required>
-                    <option value="">Selecione</option>
-                    <?php foreach (RegimeContratacaoEnum::forSelect() as $indice => $valor): ?>
-                        <option value="<?= $indice ?>" <?= !empty($propostas) && $propostas->getRegimeContratacao() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
-                    <?php endforeach; ?>
-                </select>
-                <label for="regimeContratacao" class="col-form-label">Regime de Contratação</label>
-            </div>
-            <!-- REGIME DE TRABALHO -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="regime_trabalho" id="regime_trabalho" required>
-                    <option value="">Selecione</option>
-                    <?php foreach (RegimeTrabalhoEnum::forSelect() as $indice => $valor): ?>
-                        <option value="<?= $indice ?>" <?= !empty($propostas) && $propostas->getRegimeTrabalho() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
-                    <?php endforeach; ?>
-                </select>
-                <label for="regimeTrabalho" class="col-form-label">Regime de Trabalho</label>
-            </div>
-        </div>
-        <div class="row g-3 align-items-center mb-2">
-            <!-- NÍVEL DE SENIORIDADE -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="nivel_senioridade" id="nivel_senioridade" required>
-                    <option value="">Selecione</option>
-                    <?php foreach (NivelSenioridadeEnum::forSelect() as $indice => $valor): ?>
-                        <option value="<?= $indice ?>" <?= !empty($propostas) && $propostas->getNivelSenioridade() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
-                    <?php endforeach; ?>
-                </select>
-                <label for="nivelSenioridade" class="col-form-label">Nível de Senioridade</label>
-            </div>
+    <div class="divider"></div>
+    <div class="mt-6 flex items-center justify-center space-x-3">
+        <h2 class="text-3xl font-bold">Agora é com você!</h2>
+    </div>
+    <div class="mt-6 flex items-center justify-center space-x-3">
+        <form method="post" action="/propostas/salvar">
+            <input type="hidden" name="vaga" value="<?php echo $propostas->getVaga()->getId() ?>">
+            <input type="hidden" name="candidato" value="<?php echo $propostas->getCandidato()->getId() ?>">
+            <input type="hidden" name="aceite" value="<?php echo PropostaStatusEnum::Rejeitada->value ?>">
+            <button class="btn btn-error btn-wide text-xs" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"/>
+                </svg>
+                Recusar
+            </button>
+        </form>
+        <form method="post" action="/propostas/salvar">
+            <input type="hidden" name="vaga" value="<?php echo $propostas->getVaga()->getId() ?>">
+            <input type="hidden" name="candidato" value="<?php echo $propostas->getCandidato()->getId() ?>">
+            <input type="hidden" name="aceite" value="<?php echo PropostaStatusEnum::Aceita->value ?>">
+            <button class="btn btn-success btn-wide text-lg hover:text-xl" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hover:size-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"/>
+                </svg>
+                Aceitar
+            </button>
+        </form>
 
-            <!-- NÍVEL DE HIERARQUIA -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="nivel_hierarquico" id="nivel_hierarquico" required>
-                    <option value="">Selecione</option>
-                    <?php foreach (NivelHierarquicoEnum::forSelect() as $indice => $valor): ?>
-                        <option value="<?= $indice ?>" <?= !empty($propostas) && $propostas->getNivelHierarquico() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
-                    <?php endforeach; ?>
-                </select>
-                <label for="nivelHierarquia" class="col-form-label">Nível hierárquico</label>
-            </div>
-            <div class="row md-6 align-items-center mb-2">
-                <div class=" form-floating">
-                    <input type="text" class="form-control" name="cargo" id="cargo" value="<?= $propostas->getCargo()?>">
-                    <label for="titulo" class="col-form-label">Cargo</label>
-                </div>
-                <div class="row md-6 align-items-center mb-2">
-                    <div class=" form-floating">
-                        <input type="text" class="form-control" name="endereco" id="endereco" value="<?= $propostas->getEndereco()?>">
-                        <label for="titulo" class="col-form-label">Endereco</label>
-                    </div>
-                    <div class="row md-3 align-items-center mb-2">
-                        <div class="col-md-2 form-floating">
-                            <input type="text" class="form-control" name="expediente" id="expediente" value="<?= $propostas->getExpediente()?>">
-                            <label for="expediente" class="col-form-label">Expediente</label>
-                        </div>
-                        <div class="row g-3 align-items-center mb-2">
-                            <div class="col-md-2 form-floating">
-                                <input type="text" class="form-control" name="data_inicio" id="data_inicio" value="<?= $propostas->getDataInicio()?>">
-                                <label for="data_inicio" class="col-form-label">Data Inicio</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-2 gy-3 gy-md-2 overflow-hidden mt-4 mb-2">
-            <div class="col-12">
-                <div class="d-grid">
-                    <?php if($propostas->getAceite() == PropostaStatusEnum::Aguardando->value) : ?>
-                        <form method="post" action="/propostas/salvar">
-                            <input type="hidden" name="vaga" value="<?php echo $propostas->getVaga()->getId() ?>">
-                            <input type="hidden" name="candidato" value="<?php echo $propostas->getCandidato()->getId() ?>">
-                            <input type="hidden" name="aceite" value="<?php echo PropostaStatusEnum::Aceita->value ?>">
-                            <button class="btn btn-primary" type="submit">
-                                <i class="fas fa-save"></i> Aceitar
-                            </button><br>
-                        </form>
-                        <form method="post" action="/propostas/salvar">
-                            <input type="hidden" name="vaga" value="<?php echo $propostas->getVaga()->getId() ?>">
-                            <input type="hidden" name="candidato" value="<?php echo $propostas->getCandidato()->getId() ?>">
-                            <input type="hidden" name="aceite" value="<?php echo PropostaStatusEnum::Rejeitada->value ?>">
-                            <button class="btn btn-danger" type="submit">
-                                <i class="fas fa-save"></i> Recusar
-                            </button>
-                        </form>
-                    <?php endif; ?>
-                </div>
-            </div>
-        </div>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        document.getElementById('searchInput').addEventListener('keyup', function () {
-            let searchTerm = this.value.toLowerCase();
-            let items = document.querySelectorAll('.habilidade-item');
-
-            items.forEach(function (item) {
-                let label = item.querySelector('label').textContent.toLowerCase();
-                if (label.includes(searchTerm)) {
-                    item.style.display = '';
-                } else {
-                    item.style.display = 'none';
-                }
-            });
-        });
-    });
-</script>
+    </div>
+</div>
